Prepare for registering in General (#14)
* Enable codecov.

* Add coverage badge.

* Test other julia versions and add bounds on dep versions.

* remove Mac tests for speed/reliability.

* Add Compat.jl because of `isnothing` being absent in julia 1.0.

* Bump version to v0.2.0.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 language: julia
 os:
   - linux
-  - osx
 julia:
+  - 1.0
   - 1.1
+  - 1.2
+  - nightly
+codecov: true
 notifications:
   email: false
+matrix:
+  allow_failures:
+    - julia: nightly
