--- a/Project.toml
+++ b/Project.toml
@@ -1,16 +1,25 @@
 name = "AdmittanceModels"
 uuid = "5eda1363-42a2-4d75-bc45-7e2a4a7b92b2"
 authors = ["Michael Scheer <mgscheer@@gmail.com>, Dan Girshovich <dan@rigetti.com>"]
-version = "0.1.0"
+version = "0.2.0"
 
 [deps]
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
+Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
 IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MatrixNetworks = "4f449596-a032-5618-b826-5a251cb6dc11"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 UniqueVectors = "2fbcfb34-fd0c-5fbb-b5d7-e826d8f5b0a9"
+
+[compat]
+Combinatorics = "0.7"
+Compat = "2.1"
+IterativeSolvers = "0.8"
+MatrixNetworks = "1"
+UniqueVectors = "0.7"
+julia = "1"
 
 [extras]
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
